description aligment fixed on small scren devices, and projec images were removed

--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,7 @@
 body{
     width: 70%;
     margin: 0 auto;
-    background-color: #202124;
-    color: white;
+       
 }
 header{
     display: flex;
@@ -76,16 +75,6 @@ header .terminal-prompt{
     display: flex;
     margin: 5% 0;
 }
-.project .project-description{
-    width: 70%;
-}
-.project .project-image{
-    width: 30%;
-}
-
-.project .project-image img{
-    width: 100%;
-}
 #contact{
     text-align: center;
 }
@@ -101,17 +90,14 @@ footer p{
 
     #Presentation{
         display: inline-block;
-        text-align: right;
+        text-align: center;
     }
     #Presentation h1{
-        margin: 0 25%;
-    }
-    #profile_photo{
-        width: 300px;
-        height: 300px;
+        width: 25%;
+        margin: 0 25% 0 25%;
     }
     #photo{
-        margin: 0 25%;
+        width: 100%;
     }
 
 
